# Meta-Cup

./: .dockerignore  .gitignore  PROJECT_SUMMARY.md  README.md  TECHNICAL_NOTES.md  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  setup.py
scenarios/easy/: easy_auth_token_expiry.json  easy_checkout_dependency_timeout.json  easy_email_queue_blocked.json  easy_platform_secret_rotation.json  easy_search_cache_stale.json
scenarios/hard/: hard_auth_multi_signal_conflict.json  hard_checkout_partial_outage.json  hard_email_config_regression.json  hard_payments_shadow_traffic_issue.json  hard_search_index_pipeline_failure.json
scenarios/medium/: medium_auth_db_pool_exhaustion.json  medium_checkout_flag_rollout.json  medium_email_provider_vs_config.json  medium_notifications_retry_storm.json  medium_payments_region_misroute.json
server/: app.py  environment.py
tests/: test_api.py  test_grader.py  test_inference.py
